add in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /BackendService/TodolistAPI/.vs/TodolistAPI
 /BackendService/TodolistAPI/TodolistAPI/obj
+/BackendService/TodolistAPI/.vs/ProjectEvaluation/todolistapi.metadata.v7.bin
+/BackendService/TodolistAPI/.vs/ProjectEvaluation/todolistapi.projects.v7.bin
