add in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /BackendService/TodolistAPI/TodolistAPI/obj
 /BackendService/TodolistAPI/.vs/ProjectEvaluation/todolistapi.metadata.v7.bin
 /BackendService/TodolistAPI/.vs/ProjectEvaluation/todolistapi.projects.v7.bin
+/BackendService/TodolistAPI/TodolistAPI/bin/Debug/net6.0
